# fitsgl

./: .gitignore  CLAUDE.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  vercel.json
docs/: cli.md  (+13 more)
fitsgl-py/: pyproject.toml
fitsgl-py/src/fitsgl/: __init__.py  __main__.py  bands.py  build.py  build_pyramid.py  cli.py  collection.py  config.py  cutout.py  demo.py  deploy.py  deploy_plan.py  env_file.py  fitsgl_config.py  fpack_index.py  init_scaffold.py  manifest.py  placed_tiles.py  serve.py  site.py  stats.py  tiles.py  verify.py  workspace.py
fitsgl-py/src/fitsgl/_viewer/: .build-info.json  index.html
fitsgl-py/src/fitsgl/_viewer/assets/: index--0gTuGFv.js  index-BB-m_jjA.js  index-BQ7ibX63.js  index-BRqHwiim.js  index-BhFfjL5E.js  index-Bjy2xDzz.js  index-BsEV_3F1.js  index-C-HPO8NU.js  index-C0smTh_k.js  index-C7ql2dh1.js  index-CAXek_nP.js  (+26 more)
fitsgl-py/tests/: test_bands.py  test_build.py  test_build_pyramid.py  test_catalog.py  test_collection.py  test_config.py  test_dataset.py  test_demo.py  test_deploy.py  test_deploy_plan.py  test_env_file.py  test_fitsgl_config.py  test_init_scaffold.py  test_manifest.py  test_placed_tiles.py  test_reader.py  test_serve.py  test_stats.py  test_synthetic.py  test_verify.py  test_viewer_vendor.py  test_workspace.py  test_workspace_cli.py
pyramid_gen/: pyproject.toml
pyramid_gen/src/pyramid_gen/: __init__.py  __main__.py  build.py  build_pyramid.py  catalog.py  cli.py  config.py  dataset.py  deploy.py  deploy_plan.py  fitsgl_config.py  init_scaffold.py  manifest.py  serve.py  site.py  stats.py  synthetic.py
pyramid_gen/src/pyramid_gen/_viewer/: .build-info.json  index.html
pyramid_gen/tests/: test_build.py  test_build_pyramid.py  test_catalog.py  test_config.py  test_dataset.py  test_deploy.py  test_deploy_plan.py  test_fitsgl_config.py  test_init_scaffold.py  test_manifest.py  test_placed_tiles.py  test_serve.py  test_stats.py  test_synthetic.py  test_verify.py  test_viewer_vendor.py
(+252 files in other folders)
