[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitsgl"
version = "0.1.0"
description = "Convert FITS mosaics into multi-resolution fpacked FITS pyramids for HTTP range-request browser rendering"
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.3",
    "numpy>=1.23",
    "pandas>=1.5",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# `fitsgl deploy` to Cloudflare R2 (S3-compatible). Optional so a build-only
# install stays lean; the deploy engine imports boto3 lazily and errors with a
# pointed "pip install 'fitsgl[deploy]'" if it's missing.
deploy = ["boto3>=1.28"]

[project.scripts]
fitsgl-gen = "fitsgl.__main__:main"
fitsgl = "fitsgl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the vendored SSG viewer bundle (built by ../viewer, committed to the repo)
# so `pip install` carries it and `fitsgl build` can emit a self-contained site
# without node at build time.
[tool.setuptools.package-data]
fitsgl = ["_viewer/**/*", "_viewer/.build-info.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
