[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramid_gen"
version = "0.1.0"
description = "Convert FITS mosaics into multi-resolution fpacked FITS pyramids for HTTP range-request browser rendering"
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.3",
    "numpy>=1.23",
    "pandas>=1.5",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
pyramid-gen = "pyramid_gen.__main__:main"
fitsgl = "pyramid_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
